--- a/amirproject/templates/menu.html
+++ b/amirproject/templates/menu.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <html dir="rtl" lang="fa">
+  <html dir="rtl" lang="fa"></html>
 <head>
   <!-- Basic -->
   {% load static %}
-
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
@@ -13,9 +12,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="{% static 'images/favicon - Copy.png'}" type="">
+  <link rel="shortcut icon" href="{% static 'images/favicon.png'%}" type="">
 
-  <title> برژ فود </title>
+  <title> برژ </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css'%}" />
@@ -25,7 +24,7 @@
   <!-- nice select  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
   <!-- font awesome style -->
-  <link href="{% static 'css/font-awesome.min.css'}" rel="stylesheet" />
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
   <link href="{% static 'css/style.css'%}" rel="stylesheet" />
@@ -34,11 +33,11 @@
 
 </head>
 
-<body>
+<body class="sub_page">
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="{% static 'images/bergers1.jpg'%}" alt="">
+      <img src="{% static 'images/hero-bg.jpg'%}" alt="">
     </div>
     <!-- header section strats -->
     <header class="header_section">
@@ -56,11 +55,11 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home'%}">خانه <span class="sr-only">(current)</span></a>
-              </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'menu' %}">منو</a>
+                <a class="nav-link" href="{% url 'home'%}">خانه </a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url 'menu'%}">منو <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about'%}">درباره ما</a>
@@ -141,244 +140,11 @@
       </div>
     </header>
     <!-- end header section -->
-    <!-- slider section -->
-    <section class="slider_section ">
-      <div id="customCarousel1" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-7 col-lg-6 ">
-                  <div class="detail-box">
-                    <h1>
-                      برژ فود
-                    </h1>
-                    <p>
-                      
-!ما در برژ فود، طعم واقعی غذا را به شما هدیه میدهیم. با ترکیبی از مواد اولیه تازه، دستورالعملهای خاص و سرویس سریع، هر لقمه از غذای ما یک تجربه بینظیر است.
-                    </p>
-                    <div class="btn-box">
-                      <a href="{% url 'menu'%}" class="btn1">
-                        سفارش
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item ">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-7 col-lg-6 ">
-                  <div class="detail-box">
-                    <h1>
-                      ارسال رایگان
-                    </h1>
-                    <p>
-                      
-                      !سفارش آنلاین خود را ثبت کنید و در کمترین زمان، غذای مورد علاقه تان را درب منزل یا محل کار تحویل بگیرید.
-
-                    </p>
-                    <div class="btn-box">
-                      <a href="{% url 'menu'%}" class="btn1">
-                        سفارش
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-7 col-lg-6 ">
-                  <div class="detail-box">
-                    <h1>
-                      مواد اولیه درجه یک
-                    </h1>
-                    <p>
-
-                      !در فست فود برژ فود، کیفیت و تازگی مواد اولیه برای ما در اولویت است. ما با استفاده از مواد اولیه درجه یک و کاملاً تازه، بهترین طعمها را به شما ارائه میدهیم.                    </p>
-                    <div class="btn-box">
-                      <a href="{% url 'menu'%}" class="btn1">
-                        سفارش
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <ol class="carousel-indicators">
-            <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
-            <li data-target="#customCarousel1" data-slide-to="1"></li>
-            <li data-target="#customCarousel1" data-slide-to="2"></li>
-          </ol>
-        </div>
-      </div>
-
-    </section>
-    <!-- end slider section -->
   </div>
-
-  <!-- offer section -->
-
-  <section class="offer_section layout_padding-bottom">
-    <div class="offer_container">
-      <div class="container ">
-        <div class="row">
-          <div class="col-md-6  ">
-            <div class="box ">
-              <div class="img-box">
-                <img src="{% static 'images/o1.jpg'%}" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  پنجشنبه های  بامزه
-                </h5>
-                <h6>
-                  <span>20%</span> تخفیف
-                </h6>
-                <a href="{% url 'menu'%}">
-                  سفارش <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                    <g>
-                      <g>
-                        <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
-                     c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
-                     C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
-                     c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
-                     C457.728,97.71,450.56,86.958,439.296,84.91z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
-                     c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
-                      </g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6  ">
-            <div class="box ">
-              <div class="img-box">
-                <img src="{% static 'images/o2.jpg'%}" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  روزهای  پیتزایی
-                </h5>
-                <h6>
-                  <span>15%</span>تخفیف
-                </h6>
-                <a href="{% url 'menu'%}">
-                  سفارش  <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                    <g>
-                      <g>
-                        <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
-                     c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
-                     C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
-                     c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
-                     C457.728,97.71,450.56,86.958,439.296,84.91z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
-                     c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
-                      </g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end offer section -->
 
   <!-- food section -->
 
-  <section class="food_section layout_padding-bottom">
+  <section class="food_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -407,19 +173,18 @@
                     پیتزای سبزیجات
                   </h5>
                   <p>
-                    
-نخود فرنگی
-،
-قارچ
-،
-فلفل دلمه ای 
-،
-پیازچه
-،
- ترخون، کرفس و جعفری
- ،
-اسفناج و جعفری
-                  </p>
+
+                    نخود فرنگی
+                    ،
+                    قارچ
+                    ،
+                    فلفل دلمه ای 
+                    ،
+                    پیازچه
+                    ،
+                     ترخون، کرفس و جعفری
+                     ،
+                    اسفناج و جعفری                  </p>
                   <div class="options">
                     <h6>
                       200,000
@@ -892,15 +657,15 @@
                   <img src="{% static 'images/f7.png'%}" alt="">
                 </div>
                 <div class="detail-box">
-                  <h5>
-                    برگر مرغ سوخاری
-                  </h5>
-                  <p>
-                    مرغ، پیاز ، سیر ، جعفری ساطوری شده ، نان همبرگر ، پنیر چدار ورقه‌ای ، گوجه فرنگی ، خیارشور                  </p>
-                  <div class="options">
-                    <h6>
-                      120,000
-                    </h6>
+                    <h5>
+                      برگر مرغ سوخاری
+                    </h5>
+                    <p>
+                      مرغ، پیاز ، سیر ، جعفری ساطوری شده ، نان همبرگر ، پنیر چدار ورقه‌ای ، گوجه فرنگی ، خیارشور                  </p>
+                    <div class="options">
+                      <h6>
+                        120,000
+                      </h6>
                     <a href="{% url 'sabtesefaresh'%}">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
@@ -974,8 +739,6 @@
                     مرغ، پیاز ، سیر ، جعفری ساطوری شده ، نان همبرگر ، پنیر چدار ورقه‌ای ، گوجه فرنگی ، خیارشور                  </p>
                   <div class="options">
                     <h6>
-                      140,000
-                    </h6>
                     <a href="{% url 'sabtesefaresh'%}">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
@@ -1115,7 +878,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="{% url 'menu'%}">
+        <a href="">
           بیشتر
         </a>
       </div>
@@ -1123,154 +886,6 @@
   </section>
 
   <!-- end food section -->
-
-  <!-- about section -->
-
-  <section class="about_section layout_padding">
-    <div class="container  ">
-
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="{% static 'images/about-img.png'%}" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                ما برژ هستیم
-              </h2>
-            </div>
-            <p>
-              اگه رژیمی و دلت هوس یه فست فود جذاب رو کرده،
-
-              ساندویچ‌های ارگانیک رستوران ما رو حتما امتحان کن!
-            </p>
-            <a href="{% url 'about'%}">
-              مطالعه بیشتر
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
-  <!-- book section -->
-  <section class="book_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          رزرو میز
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" class="form-control" placeholder="نام کامل" />
-              </div>
-              <div>
-                <input type="text" class="form-control" placeholder="شماره تماس" />
-              </div>
-              <div>
-                <input type="email" class="form-control" placeholder="ایمیل" />
-              </div>
-              <div>
-                <select class="form-control nice-select wide">
-                  <option value="" disabled selected>
-                    تعداد مهمان ها
-                  </option>
-                  <option value="">
-                    2
-                  </option>
-                  <option value="">
-                    3
-                  </option>
-                  <option value="">
-                    4
-                  </option>
-                  <option value="">
-                    5
-                  </option>
-                </select>
-              </div>
-              <div>
-                <input type="date" class="form-control">
-              </div>
-              <div class="btn_box">
-                <button>
-                  رزرو
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="map_container ">
-            <div id="googleMap"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end book section -->
-
-  <!-- client section -->
-  <section class="client_section layout_padding-bottom">
-    <div class="container">
-      <div class="heading_container heading_center psudo_white_primary mb_45">
-        <h2>
-          مشتری هامون چی میگن؟
-        </h2>
-      </div>
-      <div class="carousel-wrap row ">
-        <div class="owl-carousel client_owl-carousel">
-          <div class="item">
-            <div class="box">
-              <div class="detail-box">
-                <p>
-پیتزاهاشون خیلی خوشمزه س              
-                </p>
-                <h6>
-                  عباس آقایی
-                </h6>
-                <p>
-                  مشتری برژ
-                </p>
-              </div>
-              <div class="img-box">
-                <img src="{% static 'images/client2.jpg'%}" alt="" class="box-img">
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="box">
-              <div class="detail-box">
-                <p dir="ltr">
-                  غذاهاشون عالیه در انتخابتون شک نکنید!
-                </p dir="ltr">
-                <h6 dir="ltr">
-                  لیلا مشیری
-                </h6>
-                <p dir="ltr">
-                  مشتری برژ
-                </p>
-              </div>
-              <div class="img-box">
-                <img src="{% static 'images/client1.jpg'%}" alt="" class="box-img">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end client section -->
 
   <!-- footer section -->
   <footer class="footer_section">
@@ -1285,7 +900,7 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  لوکیشن ما
+                  لوکیشن
                 </span>
               </a>
               <a href="">
